# database

./: .appveyor.yml  .gitignore  .travis-BITPRIM.yml  .travis.yml  AUTHORS  CMakeLists.txt  README.md  bitprim-databaseConfig.cmake.in  build.py  build_vscode.bat  build_vscode.sh  build_vscode_debug.bat  build_vscode_debug.sh  conanfile.py  kth-databaseConfig.cmake.in  libbitcoin-database-test_runner.sh  libbitcoin-databaseConfig.cmake.in  pepe.py
.github/workflows/: conan.yml  knuth.yml
.travis/: install.sh  push_other_repo.sh
_test_package/: conanfile.py
helpers/: .release_ignore  build.py  build_vscode.bat  build_vscode.sh
include/bitcoin/: database.hpp
include/bitcoin/database/: currency_config.hpp  data_base.hpp  settings.hpp  store.hpp  unspent_outputs.hpp  unspent_transaction.hpp  version.hpp
include/bitcoin/database/databases/: block_database.hpp  history_database.hpp  spend_database.hpp  stealth_database.hpp  transaction_database.hpp  transaction_unconfirmed_database.hpp  unspent_database.hpp  unspent_database_v2.hpp  utxo_database.hpp
include/bitcoin/database/impl/: hash_table_header.ipp  record_hash_table.ipp  record_hash_table_set.ipp  record_multimap.ipp  record_row.ipp  record_row_set.ipp  remainder.ipp  slab_hash_table.ipp  slab_row.ipp
include/bitcoin/database/memory/: accessor.hpp  allocator.hpp  memory.hpp  memory_map.hpp
include/bitcoin/database/primitives/: hash_table_header.hpp  mem_hash_set.hpp  record_hash_table.hpp  record_hash_table_set.hpp  record_list.hpp  record_manager.hpp  record_multimap.hpp  slab_hash_table.hpp  slab_manager.hpp
include/bitcoin/database/result/: block_result.hpp  transaction_result.hpp  transaction_unconfirmed_result.hpp
include/bitprim/database/databases/: block_database.ipp  header_database.ipp  history_database.ipp  history_entry.hpp  index_service.ipp  internal_database.hpp  internal_database.ipp  property_code.hpp  reorg_database.ipp  result_code.hpp  spend_database.ipp  temp.cpp  tools.hpp  transaction_database.ipp  transaction_entry.hpp  transaction_unconfirmed_database.ipp  transaction_unconfirmed_entry.hpp  utxo_database.hpp  utxo_database.ipp  utxo_entry.hpp
include/kth/: database.hpp
include/kth/database/: currency_config.hpp  data_base.hpp  define.hpp  settings.hpp  store.hpp  unspent_outputs.hpp  unspent_transaction.hpp  version.hpp
include/kth/database/databases/: block_database.hpp  block_database.ipp  db_parameters.hpp  generic_db.hpp  header_abla_entry.hpp  header_database.ipp  history_database.ipp  history_entry.hpp  internal_database.hpp  internal_database.ipp  lmdb_helper.hpp  n3876.h  property_code.hpp  reorg_database.hpp  reorg_database.ipp  result_code.hpp  spend_database.hpp  spend_database.ipp  temp.cpp  tools.hpp  transaction_database.hpp  transaction_database.ipp  transaction_entry.hpp  transaction_unconfirmed_database.ipp  transaction_unconfirmed_entry.hpp  utxo_database.hpp  utxo_database.ipp  utxo_entry.hpp
include/kth/database/impl/: hash_table_header.ipp
include/kth/database/legacy/databases/: block_database.hpp  history_database.hpp  spend_database.hpp  stealth_database.hpp  transaction_database.hpp  transaction_unconfirmed_database.hpp
include/kth/database/legacy/impl/: hash_table_header.ipp  record_hash_table.ipp  record_multimap.ipp  record_row.ipp  remainder.ipp  slab_hash_table.ipp  slab_row.ipp
include/kth/database/legacy/memory/: accessor.hpp  allocator.hpp  memory.hpp  memory_map.hpp
include/kth/database/legacy/primitives/: hash_table_header.hpp  record_hash_table.hpp  record_list.hpp  record_manager.hpp  record_multimap.hpp  record_multimap_iterable.hpp  record_multimap_iterator.hpp  slab_hash_table.hpp  slab_manager.hpp
include/kth/database/legacy/result/: block_result.hpp  transaction_result.hpp  transaction_unconfirmed_result.hpp
include/kth/database/primitives/: record_hash_table.hpp
include/kth/database/result/: block_result.hpp
src/: data_base.cpp  settings.cpp  store.cpp  unspent_outputs.cpp  unspent_transaction.cpp  version.cpp
src/bitprim/databases/: history_entry.cpp  transaction_entry.cpp  transaction_unconfirmed_entry.cpp  utxo_database.cpp  utxo_entry.cpp
src/databases/: block_database.cpp  header_abla_entry.cpp  header_database.cpp  history_database.cpp  history_entry.cpp  internal_database.cpp  reorg_database.cpp  spend_database.cpp  stealth_database.cpp  transaction_database.cpp  transaction_entry.cpp  transaction_unconfirmed_database.cpp  transaction_unconfirmed_entry.cpp  unspent_database.cpp  unspent_database_v2.cpp  utxo_database.cpp  utxo_entry.cpp
src/legacy/: unspent_outputs.cpp  unspent_transaction.cpp
src/legacy/databases/: block_database.cpp  history_database.cpp  spend_database.cpp  stealth_database.cpp  transaction_database.cpp  transaction_unconfirmed_database.cpp
src/legacy/memory/: accessor.cpp  allocator.cpp  memory_map.cpp
src/legacy/mman-win32/: mman.c
src/legacy/primitives/: record_list.cpp  record_manager.cpp  record_multimap_iterable.cpp  record_multimap_iterator.cpp  slab_manager.cpp
src/legacy/result/: block_result.cpp  transaction_result.cpp  transaction_unconfirmed_result.cpp
src/memory/: accessor.cpp  allocator.cpp  memory_map.cpp
src/mman-win32/: mman.c  mman.h
src/primitives/: record_list.cpp  record_manager.cpp  record_multimap_iterable.cpp  slab_manager.cpp
src/result/: block_result.cpp  transaction_result.cpp  transaction_unconfirmed_result.cpp
test/: block_database.cpp  data_base.cpp  hash_table.cpp  history_database.cpp  internal_database.1.cpp  internal_database.cpp  main.cpp  spend_database.cpp  structure.cpp  test_helpers.hpp  transaction_database.cpp  unspent_database.cpp  unspent_outputs.cpp  unspent_transaction.cpp  utxo_database.cpp
test_package/: conanfile.py
tools/build_utxo/: build_utxo.cpp
tools/check_scripts/: check_scripts.cpp
tools/initchain/: initchain.cpp
tools/unspent_db/: unspent_db.cpp
